# mppic

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  \  conanfile.py  conanfile.txt  critics.xml  file.cmake  mppic.xml  package.xml
.cache/clangd/index/: Controller.cpp.07D39D2C87B3C7B3.idx  Controller.cpp.7F52DBF59ADC23D8.idx  Controller.hpp.3D1F1316A30A1465.idx  Controller.hpp.8C1489079B37760C.idx  Controller.hpp.DD17B7565D213443.idx  CriticFunction.hpp.C72E33B49F18470D.idx  CriticScorer.hpp.A301E716D9A17282.idx  GeometryTest.cpp.0E76FD106D78F077.idx  LineIterator.hpp.7FE0C13493CCCBE2.idx  Models.hpp.13958BAFF2444945.idx  MotionModel.hpp.45727F4C1FBAD115.idx  Optimizer.hpp.1D4D43E42571CE5E.idx  Optimizer.hpp.3A2A8FE6D8118F6E.idx  Optimizer.hpp.983D8E1D726CF87E.idx  OptimizerImpl.hpp.3F622F39876C2CC9.idx  OptimizerTest.cpp.0A465BA2EE98CF38.idx  PathHandler.cpp.C1083C36FFAFE60C.idx  PathHandler.cpp.CBBD01A6853A32BE.idx  PathHandler.hpp.1C248E83C3BA845C.idx  (+21 more)
benchmark/: CMakeLists.txt  controller_benchmark.cpp  optimizer_benchmark.cpp
cmake/: Conan.cmake  PreventInSourceBuilds.cmake
include/mppi/: Controller.hpp  Indexes.hpp  Models.hpp  Optimizer.hpp  PathHandler.hpp
include/mppic/: ControlSequence.hpp  Controller.hpp  CriticScorer.hpp  Indexes.hpp  Models.hpp  MotionModel.hpp  Optimizer.hpp  PathHandler.hpp  State.hpp  StateModels.hpp  TrajectoryVisualizer.hpp  context.hpp  controller.hpp  critic_data.hpp  critic_function.hpp  critic_manager.hpp  critic_scorer.hpp  dynamic_parameters_handler.hpp  motion_model.hpp  motion_models.hpp  optimizer.hpp  optimizer_core.hpp  optimizer_core_interface.hpp  optimizer_ros_interface.hpp  parameters_handler.hpp  path_handler.hpp  trajectory_visualizer.hpp  utils.hpp
include/utils/: common.hpp  geometry.hpp
include/visualization/: TrajectoryVisualizer.hpp  common.hpp
install/: local_setup.sh  setup.sh
log/: latest_build  latest_test
mppic/: CMakeLists.txt  README.md  conanfile.py  mppic.xml  package.xml
mppic/.cache/clangd/index/: Controller.cpp.07D39D2C87B3C7B3.idx  Controller.hpp.8C1489079B37760C.idx  Controller.hpp.DD17B7565D213443.idx  Models.hpp.13958BAFF2444945.idx  Optimizer.hpp.1D4D43E42571CE5E.idx  Optimizer.hpp.3A2A8FE6D8118F6E.idx  OptimizerBenchmark.cpp.EC349B7B597469AE.idx  OptimizerTest.cpp.0A465BA2EE98CF38.idx  PathHandler.cpp.CBBD01A6853A32BE.idx  PathHandler.hpp.8C91EFF00796A83D.idx  PathHandler.hpp.A2490435DCF9FB69.idx  TrajectoryVisualizer.hpp.E4B07462A235BFC0.idx  common.hpp.B6CD360CD968BB0E.idx  common.hpp.EF82570611F14714.idx  geometry.hpp.EB6BD4D28EA1477D.idx
mppic/benchmark/: CMakeLists.txt  OptimizerBenchmark.cpp
mppic/benchmarks/: OptimizerBenchmark.cpp
mppic/cmake/: Doxygen.cmake  StandardProjectSettings.cmake  conan.cmake
mppic/include/mppi/: Controller.hpp  CostFunctions.hpp  Models.hpp  Optimizer.hpp  PathHandler.hpp  Utils.hpp
mppic/include/mppi/impl/: Controller.hpp  Optimizer.hpp  PathHandler.hpp
mppic/include/mppic/: ControllerImpl.hpp  mppic.hpp
mppic/include/mppic/handlers/: PathHandler.hpp
mppic/include/mppic/optimization/: CriticScorer.hpp  MotionModel.hpp  Optimizer.hpp  OptimizerImpl.hpp  StateModels.hpp  TensorWrappers.hpp
mppic/include/mppic/utils/: LineIterator.hpp
mppic/include/mppic/visualization/: TrajectoryVisualizer.hpp  common.hpp
mppic/include/utils/: common.hpp  geometry.hpp  visualization.hpp
mppic/include/visualization/: TrajectoryVisualizer.hpp  common.hpp
mppic/src/: CMakeLists.txt  Controller.cpp  Optimizer.cpp  PathHandler.cpp  mppic.cpp
mppic/test/: CMakeLists.txt  OptimizerTest.cpp  catch_main.cpp  geometry-test.cpp  optimizer-test.cpp  optimizer-test.cpp.orig  optimizer_test.cpp  tests_utils.hpp
mppic/test/geometry/: CMakeLists.txt  closestPointToLineSegment2dTest.cpp  distPointToLineSegment2dTest.cpp
mppic/test/utils/: config.hpp
mppic_base/: CMakeLists.txt  package.xml
mppic_base/include/mppic_base/: CriticFunction.hpp
mppic_critics/: CMakeLists.txt  conanfile.py  critics.xml  package.xml
mppic_critics/include/mppic_critics/: AngleToGoalCritic.hpp  ApproxReferenceTrajectoryCritic.hpp  GoalAngleCritic.hpp  GoalCritic.hpp  ObstaclesCritic.hpp  ReferenceTrajectoryCritic.hpp
mppic_critics/src/: AngleToGoalCritic.cpp  ApproxReferenceTrajectoryCritic.cpp  GoalAngleCritic.cpp  GoalCritic.cpp  ObstaclesCritic.cpp  ReferenceTrajectoryCritic.cpp
nav2_pure_pursuit_controller/: CMakeLists.txt
nav2_pure_pursuit_controller/src/: pure_pursuit_controller.cpp
params/: nav2_params.yaml  nav2_params_def.yaml
plugins/: optimizers.xml  xtensor-critics.xml  xtensor-optimizer.xml
src/: CMakeLists.txt  Controller.cpp  CriticScorer.cpp  Optimizer.cpp  PathHandler.cpp  TrajectoryVisualizer.cpp  controller.cpp  critic_manager.cpp  critic_scorer.cpp  noise_generator.cpp  optimizer.cpp  optimizer_core_interface.cpp  parameters_handler.cpp  path_handler.cpp  trajectory_visualizer.cpp
src/critics/: AngleToGoalCritic.cpp  ApproxReferenceTrajectoryCritic.cpp  GoalAngleCritic.cpp  GoalCritic.cpp  ObstaclesCritic.cpp  ReferenceTrajectoryCritic.cpp  angle_to_goal_critic.cpp  approx_reference_trajectory_critic.cpp  constraint_critic.cpp  goal_angle_critic.cpp  goal_critic.cpp  local_goal_critic.cpp  obstacles_critic.cpp  path_align_critic.cpp  path_angle_critic.cpp  path_follow_critic.cpp  prefer_forward_critic.cpp  reference_trajectory_critic.cpp  smoother_critic.cpp  smoothness_critic.cpp  twirling_critic.cpp
test/: CMakeLists.txt  catch_main.cpp  config.hpp  controller_state_transition_test.cpp  controller_test.cpp  critic_manager_test.cpp  critics_tests.cpp  factory.hpp  geometry-test.cpp  geometry_test.cpp  models_test.cpp  motion_model_tests.cpp  noise_generator_test.cpp  optimizer-test.cpp  optimizer_smoke_test.cpp  optimizer_test.cpp  optimizer_unit_tests.cpp  parameter_handler_test.cpp  path_handler_test.cpp  tests_utils.hpp  trajectory_visualizer_tests.cpp  utils.hpp  utils_test.cpp
test/benchmarks/optimizers/xtensor/: CMakeLists.txt  optimizer_benchmark.cpp
test/utils/: config.hpp  factory.hpp  models.hpp  utils.hpp
(+141 files in other folders)
